Canary-Deployment/api-canary.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: test-api
  name: test-api-canary
  namespace: canary-deployment
spec:
  progressDeadlineSeconds: 600
  replicas: 2
  selector:
    matchLabels:
      app: test-api
      env: canary
  template:
    metadata:
      labels:
        app: test-api
        env: canary
    spec:
      containers:
        - name: test-api
          image: test-api:v2.0
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8000
              scheme: HTTP
            initialDelaySeconds: 3
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 5
            timeoutSeconds: 1
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8000
              scheme: HTTP
            initialDelaySeconds: 3
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 5
            timeoutSeconds: 1
          resources:
            limits:
              cpu: 2
              memory: 1Gi
            requests:
              cpu: 250m
              memory: 500Mi
      dnsPolicy: ClusterFirst
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: test-api-canary-svc
  namespace: canary-deployment
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: test-api
    env: canary
  type: ClusterIP
