Canary-Deployment/api-production.yml
apiVersion: v1
kind: Namespace
metadata:
  name: canary-deployment
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: test-api
  name: test-api-production
  namespace: canary-deployment
spec:
  progressDeadlineSeconds: 600
  replicas: 2
  selector:
    matchLabels:
      app: test-api
      env: production
  template:
    metadata:
      labels:
        app: test-api
        env: production
    spec:
      containers:
        - name: test-api
          image: test-api:v1.0
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8000
              scheme: HTTP
            initialDelaySeconds: 3
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 5
            timeoutSeconds: 1
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8000
              scheme: HTTP
            initialDelaySeconds: 3
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 5
            timeoutSeconds: 1
          resources:
            limits:
              cpu: 2
              memory: 1Gi
            requests:
              cpu: 250m
              memory: 500Mi
      dnsPolicy: ClusterFirst
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: test-api-svc
  namespace: canary-deployment
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: test-api
    env: production
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  namespace: canary-deployment
spec:
  ingressClassName: nginx
  rules:
    - host: test-api.com
      http:
        paths:
          - path: /
            backend:
              service:
                name: test-api-svc
                port:
                  number: 8080
            pathType: ImplementationSpecific
